# Algo-Trading-using-Rust

./: README.md  RUST basics  RUST notes (Chapters 1-5)  RUST notes.md  dangle_pointer.rs  first_word.rs  guessing_game.rs  ohlcs_and_indicators.rs  struct_program.rs  xgboost_1minohlc.rs
IO model/: Cargo.toml  build-training-data.rs
Prasing using csv reader/: data_parsing_using_serde.rs  ohlc_1min_indicators.rs  parsing_1min_ohlc.rs
RUST practice/: first_word.rs  multi_processing_for_loops.rs
XGBoost/: xgboost_using_indicators_5minohlc.rs
xgboost/: sort_ohlc.rs  xgboost_1minohlc.rs
